# rool

./: README.md  pyproject.toml
src/rool/: expr.py  store.py
tests/: test_expressions.py  test_store.py
