[project]
authors = [
  {name = "Eric Pfahl"},
]
dependencies = []
description = "Add your description here"
name = "rool"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.14,<0.9.0"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]
